Ensure Blueprint's overlays have a high z-index
This was required to make menus visible even when they they are in a container which already has a high z-index, e.g., a Blueprint's Select2/Suggest2 component in a monocle UI displayed on top of the code.

--- a/src/monocle-environment.css
+++ b/src/monocle-environment.css
@@ -2,3 +2,7 @@
 @import "~normalize.css";
 @import "~@blueprintjs/core/lib/css/blueprint.css";
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
+
+.bp4-overlay-content {
+    z-index: 5000;
+}
